--- a/1803.06824/randomNumbers_10.tex
+++ b/1803.06824/randomNumbers_10.tex
@@ -1,6 +1,43 @@
-\documentclass[pra,aps,groupedaddress,twocolumn,floatfix,nofootinbib]{revtex4}
+\documentclass[floatfix,12pt]{article}
 \usepackage{graphicx}
 \usepackage{soul}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[T1]{fontenc}
+\usepackage{textcomp}
+\usepackage[altbullet]{lucidabr}
+
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 \newcommand{\beq}{\begin{equation}}
 \newcommand{\eeq}{\end{equation}}
@@ -23,37 +60,49 @@
 \def\half{\frac{1}{2}}
 \def\opone{\leavevmode\hbox{\small1\normalsize\kern-.33em1}}
 
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
 \begin{document}
 
 \title{Indeterminism in Physics, Classical Chaos and Bohmian Mechanics.\\ Are Real Numbers Really Real?}
 \author{Nicolas Gisin \\
 \it \small   Group of Applied Physics, University of Geneva, 1211 Geneva 4,    Switzerland}
 
-\date{\small \today}
+\date{\small 31 May 2019 }
+\maketitle
+
 \begin{abstract}
 It is usual to identify initial conditions of classical dynamical systems with mathematical real numbers. However, almost all real numbers contain an infinite amount of information. I argue that a finite volume of space can't contain more than a finite amount of information, hence that the mathematical real numbers are not physically relevant. Moreover, a better terminology for the so-called real numbers is ``random numbers'', as their series of bits are truly random. I propose an alternative classical mechanics, which is empirically equivalent to classical mechanics, but uses only finite-information numbers. This alternative classical mechanics is non-deterministic, despite the use of deterministic equations, in a way similar to quantum theory. Interestingly, both alternative classical mechanics and quantum theories can be supplemented by additional variables in such a way that the supplemented theory is deterministic. Most physicists straightforwardly supplement classical theory with real numbers to which they attribute physical existence, while most physicists reject Bohmian mechanics as supplemented quantum theory, arguing that Bohmian positions have no physical reality. 
 \end{abstract}
-\maketitle
 
 
+\newpage
 
 \section{Introduction}\label{intro}
 %==================================
 Physics is often presented as the example of a deterministic explanation of our world. Furthermore, it is often claimed that all good explanations must follow that structure. This is usually illustrated by classical physics, a theory whose explanatory power is truly impressive, despite (or because?) the fact that its limits are well understood. Indeed, the domain of validity of classical mechanics is limited by relativity and quantum theory whose predictions are more accurate when speed and size (or action) get close to critical values determined by the universal constants $c$ and $\hbar$, respectively. 
 
-Classical mechanics is a set of dynamical equations, with initial conditions - typically position and momentum of point particles - given by real numbers. Except for particular cases\footnote{Like, e.g., Norton's dome \cite{NortonDome} and frontal collisions of point particles. \label{FN1}}, these dynamical equations together with the initial conditions determine completely and uniquely the solutions at all future and past times. Hence, the conclusion that classical physics is deterministic.
+Classical mechanics is a set of dynamical equations, with initial conditions --- typically position and momentum of point particles --- given by real numbers. Except for particular cases\footnote{Like, e.g., Norton's dome \cite{NortonDome} and frontal collisions of point particles. \label{FN1}}, these dynamical equations together with the initial conditions determine completely and uniquely the solutions at all future and past times. Hence, the conclusion that classical physics is deterministic.
 
 This has huge consequences. First, as said, this is often taken as the goal of all good scientific explanations. For example, many philosophers and physicists try to formulate quantum physics in such a way as to recover something like classical determinism, despite quantum randomness; in sections \ref{suppvar} and \ref{suppvar2} I discuss Bohmian mechanics in this context. Second, if scientific determinism would be the only good scientific explanation, then it would be highly tempting to conclude that everything covered - at least in principle - by science happens by necessity, i.e. is determined since the big-bang, including all physiological processes.
 
-In my opinion - but this paper is independent of this opinion - this has dreadful consequences: 
+In my opinion --- but this paper is independent of this opinion --- this has dreadful consequences: 
 our world would be like a movie in a closed box without any spectator. 
 If this paper is valid, then there is a greater harmony between physics and our experience \cite{DolevHarmony}.
 
 In the first part of this paper I argue that there is another theory, similar but different from classical mechanics, with precisely the same set of predictions, though this alternative theory is indeterministic\footnote{Here indeterministic is merely the negation of deterministic, i.e. synonymous to non-deterministic: given the present and the laws of nature, there is more than one possible future.}. In a nutshell, this alternative theory keeps the same dynamical equations as classical mechanics, but all parameters, including the initial conditions are given by numbers containing only a finite amount of information. I do not make any metaphysical claims about space, time nor numbers, but notice that the mathematics used in practice is always finite. In sections \ref{realNb}-\ref{randomNb} I argue that this alternative classical mechanics is more natural because it doesn't assume the existence of inaccessible information. One way to argue in favour of limiting physics to numbers with finite information is that any finite volume of space can contain only a finite amount of information (see section \ref{finiteInfo}). Consequently, the huge empirical evidence for classical mechanics equally applies to the alternative indeterministic theory. The alternative theory has the same (enormous) explanatory power, section \ref{ndcm}. It is thus not correct to claim that the empirical evidence and the explanatory power of classical mechanics supports a deterministic world view, since the same body of evidence equally supports an empirically equivalent but indeterministic alternative classical mechanics theory.
 
-In the second part of this paper I argue that every indeterministic theory can be supplemented by additional variables in such a way to render it deterministic (in much the same way as is done by Bohmian mechanics). In brief, it suffices to assume that all the indeterminism that is required at some point in time when, according to the indeterministic theory, God plays dice, i.e. when potentialities becoming actual, could be hidden as supplementary variables in the initial condition of the equivalent deterministic theory, i.e. God played all dice at the big-bang. This closes the circle: deterministic theories are equivalent to indeterministic alternative theories in which real numbers are replaced by finite-information numbers\footnote{As explained in sections \ref{realNb} and \ref{finiteInfo}, see also Fig. 1, finite information numbers contains all computable numbers, but are not restricted to them.}, and indeterministic theories can be supplemented by additional hidden variables in such a way that the supplemented theories are deterministic. %Moreover, it seems that applying our rule twice one may recover the initial theory. 
+In the second part of this paper I argue that every indeterministic theory can be supplemented by additional variables in such a way to render it deterministic (in much the same way as is done by Bohmian mechanics). In brief, it suffices to assume that all the indeterminism that is required at some point in time when, according to the indeterministic theory, God plays dice, i.e. when potentialities becoming actual, could be hidden as supplementary variables in the initial condition of the equivalent deterministic theory, i.e. God played all dice at the big-bang. This closes the circle: deterministic theories are equivalent to indeterministic alternative theories in which real numbers are replaced by finite-information numbers\footnote{As explained in sections \ref{realNb} and \ref{finiteInfo}, see also Fig. \ref{figure}, finite information numbers contains all computable numbers, but are not restricted to them.}, and indeterministic theories can be supplemented by additional hidden variables in such a way that the supplemented theories are deterministic. %Moreover, it seems that applying our rule twice one may recover the initial theory. 
 
 In sections \ref{suppvar} and \ref{suppvar2} the above rule to supplement indeterministic theories is illustrated on the alternative classical mechanics theory and on standard quantum theory, leading to standard classical mechanics and to Bohmian mechanics, respectively. Admittedly, in these two examples, the supplemented deterministic theories have, in addition to determinism, some elegance which speaks in their favour. However, one may conclude that determinism is too high a price to pay to accept these supplementary hidden variables. Indeed, indeterminism explains nicely, among other things, why probabilistic tools are so powerful in statistical mechanics \cite{Drossel}. Moreover, indeterminism opens the future, makes potentialities a real mode of existence and describes the passage of time when potentialities become actual \cite{NortonTimePasses,Dolev18}.
+
+\begin{figure}[t]
+\begin{center}\includegraphics[width=6cm]{TypicalRealNumber.eps}\end{center}
+%\vspace{-10pt}
+\caption{\it The series of bits of typical of real numbers is, after some initial finite bit string, indistinguishable from a truly random sequence of bits, as produce by a physical random number generator, here illustrated by a quantum random number generator (single photons on a beam-splitter followed by two single-photon detectors). Hence, there are two ways one may think of typical real numbers. First, one may think of them as dynamical quantities: the far away bits don't have yet any determined value, the values are continuously produced as time passes. Second, one may think of real numbers with all their bits given at ones, as if their random values were produced at some initial time. The second view is the standard view, while the first one is the view advocated here. Note that computable numbers correspond to pseudo-random number generators where all the information lies in the finite seed. The finite information numbers used here include both the computational numbers and the dynamical real numbers whose far away bits are not yet determined.}
+\label{figure}
+\end{figure} 
 
 
 \section{Classical dynamical systems}\label{cds}
@@ -96,7 +145,7 @@ Another nice way to illustrate the infinite amount of information in typical rea
 \eeq
 When the sequence $S_n$ of symbols doesn't represent a binary question, we set these two bits to 0 ($b_n^1b_n^2=00$). When they represent a question whose answer is {\it yes}, we set these bits to 01 and if the answer is {\it no} we set them to 10. This procedure is not efficient at all, but who cares\footnote{An already more economical coding would be to ignore all sequences of symbols that do not represent any question and add after each meaningful question a single bit coding for the answer.}: since a real number has infinitely many bits, there is no need to save space! Hence, one can really code the answers to all possible (binary) questions in one single real number. This illustrates the absurdly unlimited amount of information that real numbers contain. Real numbers are monsters!
 
-In the next section I argue that a finite volume of space can contain no more than a finite amount of information. Following this reasonable assumption, I argue that the so-called real numbers are not really real. More precisely, I argue that the mathematical real numbers are not physically real, by which I mean that they do not represent anything physical. Indeed, the thesis of this paper is that all of physics can be done with only finite-information numbers. Note that these numbers contain all computable numbers, but are not restricted to them: they also contain "numbers" whose far away digits are undetermined, i.e. not yet determined\footnote{This is somewhat reminiscent of Brouwer's indeterminate numbers \cite{IndeterminateNumbersPosy}.}, as illustrated in Fig. 1. All numbers containing an infinite amount of information, cannot represent physical entities; specifically, they cannot be used, and in fact are not used, to describe initial conditions\footnote{To be clear  - I am not making claims pertaining to the nature of numbers, or making assumptions regarding the reality or unreality of numbers. My concern is with distinguishing numbers that have physical significance from those that do not. Nor am I at all concerned with the well known and daunting task of accounting for the applicability of math in science. Finally, I am not arguing against the use of real numbers as a useful tool for calculus, simply only finite-information number can represent something physical.}, see also \cite{DowekRealNb13}. Moreover, in practice, one never uses real numbers, except to prove some general abstract non-constructive existence theorems. The fact that one doesn't need real numbers in practice is quite obvious, as one never accesses an infinite amount of information. Furthermore, today all predictions can be - and most of the time are - encoded in computers, computers that obviously hold at most a finite amount of bits, as emphasized in the next section. Consequently, physics is actually done using only finite-information numbers and, as we'll see in section \ref{ndcm}, classical physics with finite-information initial condition is a well defined indeterministic alternative theory to classical mechanics. Admittedly, one may prefer to postulate that real numbers are physically significant, as I discuss in section \ref{suppvar2}.
+In the next section I argue that a finite volume of space can contain no more than a finite amount of information. Following this reasonable assumption, I argue that the so-called real numbers are not really real. More precisely, I argue that the mathematical real numbers are not physically real, by which I mean that they do not represent anything physical. Indeed, the thesis of this paper is that all of physics can be done with only finite-information numbers. Note that these numbers contain all computable numbers, but are not restricted to them: they also contain "numbers" whose far away digits are undetermined, i.e. not yet determined\footnote{This is somewhat reminiscent of Brouwer's indeterminate numbers \cite{IndeterminateNumbersPosy}.}, as illustrated in Fig. \ref{figure}. All numbers containing an infinite amount of information, cannot represent physical entities; specifically, they cannot be used, and in fact are not used, to describe initial conditions\footnote{To be clear  --- I am not making claims pertaining to the nature of numbers, or making assumptions regarding the reality or unreality of numbers. My concern is with distinguishing numbers that have physical significance from those that do not. Nor am I at all concerned with the well known and daunting task of accounting for the applicability of math in science. Finally, I am not arguing against the use of real numbers as a useful tool for calculus, simply only finite-information number can represent something physical.}, see also \cite{DowekRealNb13}. Moreover, in practice, one never uses real numbers, except to prove some general abstract non-constructive existence theorems. The fact that one doesn't need real numbers in practice is quite obvious, as one never accesses an infinite amount of information. Furthermore, today all predictions can be --- and most of the time are --- encoded in computers, computers that obviously hold at most a finite amount of bits, as emphasized in the next section. Consequently, physics is actually done using only finite-information numbers and, as we'll see in section \ref{ndcm}, classical physics with finite-information initial condition is a well defined indeterministic alternative theory to classical mechanics. Admittedly, one may prefer to postulate that real numbers are physically significant, as I discuss in section \ref{suppvar2}.
 
 
 \section{A finite volume in space contains at most finite information}\label{finiteInfo}
@@ -107,7 +156,7 @@ The enormous progress in information storage over the last few decades profoundl
 
 Here I would like to explore the deep conceptual consequences of this assumption, an assumption easy to formulate and defend in our information-based society, but an assumption hardly conceivable a century ago. Remember indeed, that the modern concept of information was formalized by Shannon only in the 1940's.%, forming with relativity and quantum theory the three main scientific revolutions of the first half of the 20th century.
 
-Consider a small volume, a cubic centimetre let's say, containing a marble ball. This small volume can contain but a finite amount of information. Hence, the centre of mass of this marble ball can't be a real number (and even less 3 real numbers), since real numbers contain - with probability one - an infinite amount of information. Classical physics describes the centre of mass of the ball by 3 real numbers; and this is an extremely efficient description. But the assumption that a finite volume of space can't contain more but a finite amount of information implies that the centre of mass of any object cannot be identified with mathematical real numbers. Real numbers are useful tools, but are only tools. They do not represent physical reality. 
+Consider a small volume, a cubic centimetre let's say, containing a marble ball. This small volume can contain but a finite amount of information. Hence, the centre of mass of this marble ball can't be a real number (and even less 3 real numbers), since real numbers contain --- with probability one --- an infinite amount of information. Classical physics describes the centre of mass of the ball by 3 real numbers; and this is an extremely efficient description. But the assumption that a finite volume of space can't contain more but a finite amount of information implies that the centre of mass of any object cannot be identified with mathematical real numbers. Real numbers are useful tools, but are only tools. They do not represent physical reality. 
 
 Admittedly, according to today's physics the above argument is a bit misleading, since we know that, ultimately, the marble ball and its centre of mass should be described by quantum physics, including quantum indeterminacy (often called uncertainty). This is correct, of course. But let's continue with classical physics because, first, it remains extremely useful today, and, secondly, it is often presented as the archetype of deterministic theories. The main point of this paper is that classical physics is deterministic only if one attributes to the tool of real numbers physical significance. As soon as one realizes that the mathematical real numbers are ``not really real'', i.e. have no physical significance, then one concludes that classical physics is not deterministic, as we elaborate in section \ref{ndcm}. Actually, things are even worse, as we explain in the next section.
 
@@ -116,12 +165,6 @@ Admittedly, according to today's physics the above argument is a bit misleading,
 \section{Mathematical real numbers are physical random numbers}\label{randomNb}
 %==============================================================================
 Some real numbers can be computed up to arbitrary precision with a computer, like for example all rational numbers and numbers like $\sqrt{2}$ and $\pi$. Such computable numbers contain only finite information, the length in bits of the shortest program that outputs their bits. Note that since there are only countably many programs, the set of real numbers that can be calculated by a computer is infinitely smaller than the set of all real numbers. More precisely, the set of computable numbers is countably-infinite, like the integers, while the set of real numbers is continuously-infinite, like the mathematical points on a line. Consequently, real numbers are uncomputable with probability one. Or, equivalently, the set of computable numbers has measure zero among the set of all real numbers. For more see \cite{Chaitin}.
-
-\begin{figure}[h]
-\includegraphics[width=6cm]{TypicalRealNumber.eps}
-%\vspace{-10pt}
-\caption{\it The series of bits of typical of real numbers is, after some initial finite bit string, indistinguishable from a truly random sequence of bits, as produce by a physical random number generator, here illustrated by a quantum random number generator (single photons on a beam-splitter followed by two single-photon detectors). Hence, there are two ways one may think of typical real numbers. First, one may think of them as dynamical quantities: the far away bits don't have yet any determined value, the values are continuously produced as time passes. Second, one may think of real numbers with all their bits given at ones, as if their random values were produced at some initial time. The second view is the standard view, while the first one is the view advocated here. Note that computable numbers correspond to pseudo-random number generators where all the information lies in the finite seed. The finite information numbers used here include both the computational numbers and the dynamical real numbers whose far away bits are not yet determined.}
-\end{figure} 
 
 The above simple observation has the following important consequence: after the first bits, the next bits of almost all real numbers are random: they don't follow any structure. These bits are as random as the outcome of quantum measurements (on half a singlet, let's say), i.e. they are as random as possible\footnote{Some caution is due here, as not all bits of all real numbers are random, as illustrated by the following example. Define a number with all bits at even positions identical to the corresponding bits of the computable number $\pi$ and all bits at odd positions determined by the successive outcomes of a given (infinite) sequence of ``true coin tosses'', e.g. the outcomes of a quantum random number generator. In such an artificial case, every second bit is predictable, but all others are truly random.\label{randomPi}} \cite{Chaitin}. Actually, one can't even name or characterize real numbers, as there are only countably many names and characterizations. Hence, almost all real numbers are totally outside our grasp: we can't say anything about them, except that their digits are random, they have no structure. Indeed, if the digits of a real number had some structure, this very structure would allow one to characterise and name that number.
 
@@ -155,7 +198,7 @@ That it is possible to do so in the case of classical mechanics is well known. I
 
 For physicists this may look like a joke: we first argued at length that "`real numbers are not really real"' just to next introduce them again. But notice what is achieved by viewing things in this way. The real numbers are certainly not necessarily part of the ontology of classical physics, it is not the experimental facts that force physics to include real numbers in the ontology of classical physics. Hence, at first, classical physics is non-deterministic. However, all non-deterministic theories can be turned deterministic by adding supplementary variables. In full generality, it suffices to add, for example, as supplementary variables all results of all future measurements, while making sure that these supplementary variables remain hidden as long as the corresponding measurements haven't happen. In fact, that's exactly how classical mechanics is done: postulating that the initial condition of all classical dynamical systems are faithfully described by real numbers is an elegant way of adding all future results, while making sure that they remain inaccessible for long enough a time. Admittedly, just adding future results and postulating that there are inaccessible won't convince any scientist. Adding the real numbers to classical physics is much more convincing, because it is elegant. But is it truly different? 
 
-And what about quantum physics? Here there is a well known way to add supplementary variables in such a way as to turn quantum mechanics deterministic. This is known as Bohmian mechanics (or the de Broglie-Bohm pilot wave) \cite{Bohm52,BellBohm,DurrTeufel}. Essentially, one postulates that all particles always have well defined - though inaccessible - positions and that, at the end of the day, all measurements are positions measurements (position of some pointer, position of some electrons that turn on/off some LEDs, etc). These particle positions, which I name Bohmian positions, are guided by the solution of the usual Schr\"odinger equation in a clever way such that if the initial positions are assumed to be statistically distributed according to the usual quantum probabilities, i.e. $|\psi(\vec x)|^2$, then the statistical distribution of the Bohmian positions remain in accordance with quantum probabilities at all times. This is very elegant and, like for the real numbers for classical physics, adding Bohmian positions to the ontology of the theory turns quantum physics into a deterministic theory. Note that it requires also to ``trust'' real numbers, as the Bohmian positions and the quantum state vector use them. 
+And what about quantum physics? Here there is a well known way to add supplementary variables in such a way as to turn quantum mechanics deterministic. This is known as Bohmian mechanics (or the de Broglie-Bohm pilot wave) \cite{Bohm52,BellBohm,DurrTeufel}. Essentially, one postulates that all particles always have well defined --- though inaccessible --- positions and that, at the end of the day, all measurements are positions measurements (position of some pointer, position of some electrons that turn on/off some LEDs, etc). These particle positions, which I name Bohmian positions, are guided by the solution of the usual Schr\"odinger equation in a clever way such that if the initial positions are assumed to be statistically distributed according to the usual quantum probabilities, i.e. $|\psi(\vec x)|^2$, then the statistical distribution of the Bohmian positions remain in accordance with quantum probabilities at all times. This is very elegant and, like for the real numbers for classical physics, adding Bohmian positions to the ontology of the theory turns quantum physics into a deterministic theory. Note that it requires also to ``trust'' real numbers, as the Bohmian positions and the quantum state vector use them. 
 
 A point of caution is due here: In case of systems composed of more than one particle, one should realize that the evolution of any particle, let's say the first one, depends on the entire wave-function. Hence, it depends also on what happens at the location of the other particles, i.e. each particle is guided in a non-local way. This is necessary because quantum predictions violate the Bell inequality, hence all alternative (or supplemented) theories that reproduce quantum predictions must contain some non-local features \cite{Bellspeakable, BrunnerRMP14, GisinQchance14}. But this is probably why most physicists reject Bohmian mechanics: they dislike explicit (though unavoidable) non-locality.
 
