--- a/1606.08444/emergentspace.tex
+++ b/1606.08444/emergentspace.tex
@@ -5,8 +5,42 @@ showpacs,
  amsmath,amssymb,
  aps,
  prd,
- superscriptaddress,
+ superscriptaddress, 12pt
 ]{revtex4-1}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=1.25in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+\sloppy
 
 \usepackage{graphicx}% Include figure files
 \usepackage{dcolumn}% Align table columns on decimal point
@@ -14,9 +48,9 @@ showpacs,
 
 \usepackage{color}
 \usepackage{hyperref}
-\usepackage{caption}
 \usepackage{subcaption}
 \usepackage{url}
+
 
 %%% PACKAGES
 \usepackage{booktabs} % for much better looking tables
@@ -25,11 +59,7 @@ showpacs,
 \usepackage{verbatim} % adds environment for commenting out blocks of text & for better verbatim
 
 %%% HEADERS & FOOTERS
-\usepackage{fancyhdr} % This should be set AFTER setting up the page geometry
-\pagestyle{fancy} % options: empty , plain , fancy
-\renewcommand{\headrulewidth}{0pt} % customise the layout...
-\lhead{}\chead{}\rhead{}
-\lfoot{}\cfoot{\thepage}\rfoot{}
+\pagestyle{plain}
 
 %%% ToC (table of contents) APPEARANCE
 \usepackage{amsmath}
@@ -54,7 +84,6 @@ showpacs,
 
 %%% END Article customizations
 %%% The "real" document content comes below...
-
 
 \begin{document}
 
@@ -84,7 +113,8 @@ showpacs,
 
 % \affiliation{Institute for Quantum Information and Matter, California Institute of Technology, Pasadena, CA 91125, USA}\\
 
- 
+\bigskip
+
 \begin{abstract}
 We examine how to construct a spatial manifold and its geometry from the entanglement structure of an abstract quantum state in Hilbert space. 
 Given a decomposition of Hilbert space $\mathcal{H}$ into a tensor product of factors,  we consider a class of ``redundancy-constrained states" in $\mathcal{H}$ that generalize the area-law behavior for entanglement entropy usually found in condensed-matter systems with gapped local Hamiltonians. Using mutual information to define a distance measure on the graph, we employ classical multidimensional scaling to extract the best-fit spatial dimensionality of the emergent geometry. 
@@ -98,8 +128,6 @@ A version of the ER=EPR conjecture is recovered, in that perturbations that enta
 %\keywords{Suggested keywords}%Use showkeys class option if keyword
                               %display desired
 \maketitle
-
-\baselineskip=15pt
 
 \tableofcontents
 \newpage
@@ -468,7 +496,6 @@ The ground state correlation function $|\langle S^a_i S^a_j\rangle|$ is approxim
 We constructed a graph of 100 vertices and assigned edge weights given by the square of correlator. No coarse-graining is performed. Applying MDS to this graph returns a vector of embedding coordinates in Euclidean space. As expected, there is distortion in the embedding and the coordinate matrix $\mathbf{\tilde{X}}$ has rank greater than one. However, the distortion, as measured using eigenvalues, has $\epsilon_{1} = 0.0167$, from which we determine that it only slightly deviates from an embedding in 1d. In figure \ref{fig:1dline}, a patch of approximately 50 points is plotted. The one-dimensional nature of the reconstructed geometry is evident.
 
 \begin{figure*}[t!]
-    \centering
     \begin{subfigure}[t]{0.45\textwidth}
         \centering
         \includegraphics[width=\linewidth]{2dEigenVal10Big.png}
@@ -478,7 +505,8 @@ We constructed a graph of 100 vertices and assigned edge weights given by the sq
         \centering
         \includegraphics[width=\linewidth]{3dGridNoEdge.png}
     \end{subfigure}
-    \caption{Multidimensional scaling results for a coarse-grained 2-d toric code ground state. Again, the left shows the eigenvalues of (\ref{eq:diagonal}) and the right shows the reconstructed geometry. The two dominant eigenvalues show that the geometry is two-dimensional, though the fit is not as close as it was in the 1-$d$ example. Similarly, the reconstructed geometry shows a bit more distortion.}
+    \caption{
+    Multidimensional scaling results for a coarse-grained 2-d toric code ground state. Again, the left shows the eigenvalues of (\ref{eq:diagonal}) and the right shows the reconstructed geometry. The two dominant eigenvalues show that the geometry is two-dimensional, though the fit is not as close as it was in the 1-$d$ example. Similarly, the reconstructed geometry shows a bit more distortion.}
     \label{fig:2darea2d}
 \end{figure*}
 
