fix \count\footins in revtex

--- a/2002.02371/2002.02371-work.tex
+++ b/2002.02371/2002.02371-work.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,onecolumn,nofootinbib,amsmath,amssymb, floatfix]{revtex4-1}
+\documentclass[12pt,onecolumn,nofootinbib,amsmath,amssymb]{revtex4-2}
 %\usepackage{dcolumn}
 %\usepackage{bm}
 %\pdfoutput=1
@@ -45,9 +45,10 @@ bookmarksopenlevel=10
 \DeclareMathSymbol{\varphi}{\mathord}{greekletters}{"27}
 
 \input{../helpers/fix-underbrace.tex}
-\input{../helpers/revtex-12-fix.tex}
+\input{../helpers/fix-revtex-12.tex}
 
 \begin{document}
+
 \normalem
 \title{Joseph Polchinski: A Biographical Memoir}
 \author{Raphael Bousso}
