--- a/helpers/fix-revtex-12.tex
+++ b/helpers/fix-revtex-12.tex
@@ -26,6 +26,18 @@
     \itemsep \parsep
   }%
 }%
-
+\def\open@column@one#1{%
+ \ltxgrid@info@sw{\class@info{\string\open@column@one\string#1}}{}%
+ \unvbox\pagesofar
+ \@ifvoid{\footsofar}{}{%
+  \insert\footins\bgroup\unvbox\footsofar\egroup
+  \penalty\z@
+ }%
+ \gdef\thepagegrid{one}%
+ \global\pagegrid@col#1%
+ \global\pagegrid@cur\@ne
+ \global\count\footins\@m
+ \set@column@hsize\pagegrid@col
+ \set@colht
+}%
 \makeatother
-\count\footins=1000
