--- a/physics-0610121/Schrodinger_v3.tex
+++ b/physics-0610121/Schrodinger_v3.tex
@@ -1,5 +1,5 @@
 %\documentclass[twocolumn,showpacs,footinbib,preprintnumbers,amsmath,amssymb,prb]{revtex4}
-\documentclass[preprint,footinbib,preprintnumbers,amsmath,amssymb,prb]{revtex4}
+\documentclass[preprint,footinbib,preprintnumbers,amsmath,amssymb,prb,12pt]{revtex4}
 
 %\documentclass[preprint,aps]{revtex4}
 %\documentclass[preprint,aps,draft]{revtex4}
@@ -16,6 +16,31 @@
 %author defined substitutions
 \def\Schrodinger{Schr\"{o}dinger }
 %\nofiles
+
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=1in, foot=.5in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+
+ \global\count\footins=1000
 
 \begin{document}
 
@@ -34,7 +59,7 @@ University, Cambridge, Massachusetts 02138}
 \affiliation{Department of Physics\\Massachusetts Institute of
 Technology, Cambridge, Massachusetts 02139}
 
-\date{\today}% It is always \today, today,
+\date{ 17 Oct 2006 }% It is always \today, today,
              %  but any date may be explicitly specified
 
 
@@ -46,8 +71,6 @@ this by extending the wave equation for classical fields to photons,
 generalize to non-zero rest mass particles, and simplify using
 approximations consistent with non-relativistic particles.
 \end{abstract}
-
-\pacs{01.40.Ha,03.65.Ðw,03.65.Sq,03.65.Pm,01.40.GÐ, 01.40.Ðd,01.55+b}
 
 \maketitle
 
@@ -293,7 +316,7 @@ Then
 \frac{\partial\Psi}{\partial\,t}&=&-\frac{i}{\hbar}mc^2e^{-\frac{i}{\hbar}mc^2t}\phi+e^{\frac{-i}{\hbar}mc^2t}\frac{\partial\phi}{\partial\,t}\\
 \frac{\partial^2\Psi}{\partial\,t^2}&=&\Bigl(-\frac{m^2c^4}{\hbar^2}e^{-\frac{i}{\hbar}mc^2t}\phi-\frac{2i}{\hbar}mc^2e^{-\frac{i}{\hbar}mc^2t}\frac{\partial\phi}{\partial\,t}\Bigl)+e^{-\frac{i}{\hbar}mc^2t}\frac{\partial^2\phi}{\partial\,t^2}.
 \end{eqnarray}
-The first term in brackets is large and the last term is small. We
+The term in brackets is large and the term outside is small. We
 keep the large terms and discard the small one. Using this
 approximation in the Klein-Gordon equation,
 Eq.~(\ref{kleingordon1D}), we find
@@ -370,7 +393,7 @@ The authors would like to thank Jeanette Kurian for being the first undergraduat
 \bibitem{merzbacher} E.~Merzbacher, \textit{Quantum Mechanics}, (Wiley, New York, 1998), 3rd ed.
 \bibitem{sakurai} J.J.~Sakurai, \textit{Modern Quantum Mechanics}, (Addison-Wesley, Massachusetts, 1994), Rev. ed.
 \bibitem{hall} M.J.W.~Hall, M.~Reginatto, ``Schr\"{o}dinger equation from an exact uncertainty principle,'' J. Phys. A \textbf{35}, 3289-3303 (2002).
-\bibitem{peice} P.~Peice, ``Another Schr\"{o}dinger derivation of the equation,'' Eur. J. Phys. \textbf{17},116Ð117 (1996).
+\bibitem{peice} P.~Peice, ``Another Schr\"{o}dinger derivation of the equation,'' Eur. J. Phys. \textbf{17},116--117 (1996).
 \bibitem{field} J.H.~Field, ``Relationship of quantum mechanics to classical electromagnetism and classical relativistic mechanics,'' Eur. J. Phys. \textbf{25}, 385-397 (2004).
 \bibitem{ogborn} J.~Ogborn and E.F.~Taylor, ``Quantum physics explains Newton's laws of motion,'' Phys. Educ. \textbf{40}, (1), 26-34 (2005).
 \bibitem{nelson} E.~Nelson, ``Derivation of the Schr\"{o}dinger equation from Newtonian mechanics,'' Phys. Rev. \textbf{150}, (4), 1079-1085 (1966).
