--- a/2001.06582/2001.06582.tex
+++ b/2001.06582/2001.06582.tex
@@ -1,10 +1,43 @@
- 
-
-
-\documentstyle[11pt]{article}
+\documentclass[12pt]{article}
 \def\fnote#1#2{\begingroup\def\thefootnote{#1}\footnote{#2}\addtocounter
 {footnote}{-1}\endgroup}
 \def\BM#1{\mbox{\boldmath{$#1$}}}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 \begin{document}
 
@@ -54,7 +87,7 @@ A class of models is considered in which the masses only of the third generation
 \end{center}
 
 
-In the Standard Model the masses of quarks and leptons take values proportional to the coupling constants in the interaction of these fermions with scalar fields, constants that in the context of this model are entirely arbitrary.  But the peculiar hierarchical pattern of lepton and quark masses seems to call for a larger theory, in which in some leading approximation the only quarks and leptons with non-zero mass are those of the third generation, the tau, top, and bottom, with the other lepton and quark masses arising from some sort of radiative correction.  Such theories were actively considered[1]	  soon after the completion of the Standard Model, but interest in this program seems to have lapsed subsequently[2].  
+In the Standard Model the masses of quarks and leptons take values proportional to the coupling constants in the interaction of these fermions with scalar fields, constants that in the context of this model are entirely arbitrary.  But the peculiar hierarchical pattern of lepton and quark masses seems to call for a larger theory, in which in some leading approximation the only quarks and leptons with non-zero mass are those of the third generation, the tau, top, and bottom, with the other lepton and quark masses arising from some sort of radiative correction.  Such theories were actively considered[1]	  soon after the completion of the Standard Model, but interest in this program seems to have lapsed subsequently [2].  
 
 This paper will explore in detail a class of models of this sort, based on a different symmetry group.  These models are not realistic, for reasons that will be spelled out later,  but it is hoped that they may help to revive interest in this program, and to lay out some of the methods and problems that it confronts.
 
