--- a/1304.4943/TimeResInterf.tex
+++ b/1304.4943/TimeResInterf.tex
@@ -1,6 +1,33 @@
 \documentclass[prl,reprint,twocolumn,amsmath,preprintnumbers,amssymb,superscriptaddress]{revtex4-1}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.05}
 
-\usepackage{times}
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 %\usepackage[letterpaper,margin=0.5in]{geometry}
 %\usepackage{refcheck}
 \usepackage{array}
